try fixing font flickering

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -86,6 +86,7 @@ html,
 body {
     max-width: 100dvw;
     min-height: 100dvh;
+    font-display: auto;
 }
 
 body {
